--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> ديباجه </title>
+    <title> advisor </title>
     <link rel="icon" type="image/x-icon" href="img/fav.svg">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
@@ -37,8 +37,8 @@
     <content class="container">
         <!-- main section -->
         <section class="mainSection"
-            style="background: linear-gradient(-45deg, #c0a03375, #92730dcf), url(img/main.png)">
-            <h1 data-aos="fade-down"> متجر الكتروني متكامل للعبايات وملابس المحجبات </h1>
+            style="background: linear-gradient(-45deg, #07B1FC75, #0680b5cf), url(img/main.jpg)">
+            <h1 data-aos="fade-down"> موقعك الاول للتواصل الاجتماعي بجميع المميزات </h1>
             <a href="#download" class="btn"> حمل التطبيق الآن <img src="img/download.svg" alt=""> </a>
         </section>
         <!-- appImgs -->
@@ -84,9 +84,7 @@
                     <div class="swiper-slide">
                         <img src="img/10.png"/>
                     </div>
-                    <div class="swiper-slide">
-                        <img src="img/11.png"/>
-                    </div>
+                
                 </div>
                 <img src="img/frame.png" class="frame" alt="">
             </div>
@@ -161,7 +159,7 @@
         <div class="container">
             <div class="data">
                 كل الحقوق محفوظة
-                <a class="company" href="#!" target="_blank"> ديباجه </a>
+                <a class="company" href="#!" target="_blank"> advisor </a>
                 &copy;
                 <script>
                     document.write(new Date().getFullYear())
