--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <content class="container">
         <!-- main section -->
         <section class="mainSection"
-            style="background: linear-gradient(-45deg, #07B1FC75, #0680b5cf), url(img/main.jpg)">
+            style="background: linear-gradient(-45deg, #07B1FC75, #0680b5cf), url(img/main.jpg1)">
             <h1 data-aos="fade-down"> موقعك الاول للتواصل الاجتماعي بجميع المميزات </h1>
             <a href="#download" class="btn"> حمل التطبيق الآن <img src="img/download.svg" alt=""> </a>
         </section>
