--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- header -->
     <header>
         <div class="container">
-            <img class="logo" src="img/Logo.svg" alt="">
+            <img class="logo" src="img/logo.svg" alt="">
             <!-- <div class="dropdown">
                 <img class="icon me-2" src="img/language.svg" alt="">
                 اللغة
